@@ -146,6 +146,7 @@
 	- Fixed a crash related to lara's hair.
 	- Fixed bleeding windows when destroying them.
 	- Implemented TR4/TR5 sprint to crouch (this feature is available in all tr3 original and custom levels since the animation is in all tr3 wad files).
+	- Implemented setMinecartTurnModifier to modify the block length of the minecart turn angle, for example you can set it to 1 and it will take 4 blocks instead of 3 to complete a turn.
 	- Added new several client and server scripting functions:
 		· setCameraPosition.
 		· getCameraRoom.
@@ -170,6 +171,7 @@
 		· getPlayerHeadRotation.
 		· getPlayerTorsoRotation.
 		· getPlayerArmFrameNumber.
+		· setMinecartTurnModifier.
 	
 	
 	
